update naming service in ingress

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -46,7 +46,7 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: login-app
+            name: login-service
             port:
               number: 80
 ---
