--- a/java/Jenkinsfile
+++ b/java/Jenkinsfile
@@ -47,21 +47,21 @@ pipeline {
                 script {
                     // Deploy to Kubernetes using kubectl
                     sh '''
-                        kubectl apply -f k8s/deployment.yaml -n $KUBERNETES_NAMESPACE
+                        kubectl apply -f java/k8s/deployment.yaml -n $KUBERNETES_NAMESPACE
                     '''
                 }
             }
         }
-        // stage('rollout restart  Kubernetes') {
-        //     steps {
-        //         script {
-        //             // Deploy to Kubernetes using kubectl
-        //             sh '''
-        //                 kubectl rollout restart auth-app -n $KUBERNETES_NAMESPACE
-        //             '''
-        //         }
-        //     }
-        // }
+        stage('rollout restart  Kubernetes') {
+            steps {
+                script {
+                    // Deploy to Kubernetes using kubectl
+                    sh '''
+                        kubectl rollout restart auth-app -n $KUBERNETES_NAMESPACE
+                    '''
+                }
+            }
+        }
     }
     post {
         always {
